--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Matias Rosenberg – Portfolio" />
   <meta property="og:description" content="Predictive modeling, Power BI dashboards, and manufacturing analytics." />
   <style>
-    :root { --bg:#0b0c10; --fg:#f5f7fa; --muted:#9aa3ae; --accent:#00c2a8; }
+    :root { --bg:#ffffff; --fg:#f5f7fa; --muted:#9aa3ae; --accent:#00c2a8; }
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.6 system-ui,Segoe UI,Roboto,Inter,Arial}
     h1,h2,h3{margin:0 0 .5rem}
