--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>
-        <a href="mailto:you@tamu.edu">Email</a> ·
-        <a href="https://www.linkedin.com/in/your-handle" target="_blank" rel="noreferrer">LinkedIn</a> ·
-        <a href="https://github.com/your-handle" target="_blank" rel="noreferrer">GitHub</a>
+        <a href="mailto:mrosenbergc02@gmail.com">Email</a> ·
+        <a href="https://www.linkedin.com/in/matias-rosenberg/" target="_blank" rel="noreferrer">LinkedIn</a> ·
       </p>
     </section>
   </main>
