--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matias Rosenberg – Portfolio</title>
   <meta name="description" content="Industrial and Systems Engineering student building ML + analytics for manufacturing. Predictive modeling, Power BI, and process optimization." />
