--- a/index.html
+++ b/index.html
@@ -2,86 +2,174 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matias Rosenberg – Portfolio</title>
-  <meta name="description" content="Industrial and Systems Engineering student building ML + analytics for manufacturing. Predictive modeling, Power BI, and process optimization." />
+  <meta name="description" content="Industrial & Systems Engineering student building ML + analytics for manufacturing. Predictive modeling, Power BI, and process optimization." />
   <meta property="og:title" content="Matias Rosenberg – Portfolio" />
   <meta property="og:description" content="Predictive modeling, Power BI dashboards, and manufacturing analytics." />
-  <style>
-    :root { --bg:#ffffff; --fg:#f5f7fa; --muted:#9aa3ae; --accent:#00c2a8; }
-    *{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.6 system-ui,Segoe UI,Roboto,Inter,Arial}
-    h1,h2,h3{margin:0 0 .5rem}
-    h1{font-size:2.2rem}
-    h2{font-size:1.5rem;margin-top:2rem}
-    .wrap{max-width:900px;margin:0 auto;padding:24px}
-    .small{font-size:.9rem;color:var(--muted)}
-    header{padding:64px 24px 24px}
-    header p{color:var(--muted)}
-    .cta{margin-top:12px}
-    .btn{display:inline-block;margin:0 8px 8px 0;padding:10px 14px;border-radius:12px;background:var(--accent);color:#002;text-decoration:none;font-weight:700}
-    .btn.ghost{background:transparent;border:1px solid var(--accent);color:var(--fg)}
-    .cards{list-style:none;padding:0;display:grid;gap:12px}
-    .cards li{border:1px solid #1f232b;border-radius:12px;padding:14px;background:#0f1116}
-    a{color:var(--accent);text-decoration:none}
-    a:hover{text-decoration:underline}
-    footer{padding-bottom:24px}
-    .pill{display:inline-block;padding:2px 8px;border:1px solid #2a2e36;border-radius:999px;color:var(--muted);font-size:.85rem;margin-right:6px}
-  </style>
+  <!-- External stylesheet -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header class="wrap">
-    <h1>Matias Rosenberg</h1>
-    <p>Industrial and Systems Engineering @ Texas A&M • ML in Manufacturing</p>
-    <div class="cta">
-      <a class="btn" href="resume.pdf" download>Download Resume (PDF)</a>
-      <a class="btn ghost" href="#projects">View Projects</a>
+  <!-- ====== Header / Hero ====== -->
+  <header class="site-header">
+    <div class="wrap hero">
+      <h1>Matias Rosenberg</h1>
+      <p class="muted">Industrial & Systems Engineering @ Texas A&M • ML in Manufacturing</p>
+      <div class="cta">
+        <a class="btn" href="resume.pdf" download>Download Resume (PDF)</a>
+        <a class="btn ghost" href="#projects">View Projects</a>
+      </div>
     </div>
   </header>
 
   <main class="wrap">
-    <section id="about">
+    <!-- ====== About ====== -->
+    <section id="about" class="section">
       <h2>About</h2>
       <p>I build practical data products for factories. My focus is Power BI dashboards and machine learning models that standardize insert consumption and reduce cost per piece. I like clean data pipelines, simple visuals, and measurable impact.</p>
       <div class="small">
         <span class="pill">Python</span>
-        <span class="pill">scikit-learn</span>
+        <span class="pill">scikit‑learn</span>
         <span class="pill">Pandas</span>
         <span class="pill">Power BI</span>
         <span class="pill">Streamlit</span>
+        <span class="pill">Excel (advanced)</span>
+        <span class="pill">VBA</span>
       </div>
     </section>
 
-    <section id="experience">
+    <!-- ====== Education ====== -->
+    <section id="education" class="section">
+      <div class="section-head">
+        <h2>Education</h2>
+      </div>
+      <ul class="cards">
+        <li class="card">
+          <h3>Texas A&M University — College Station, TX</h3>
+          <p><strong>B.S. Industrial & Systems Engineering</strong> • <em>May 2026</em></p>
+          <p class="small">Minor: Project Management • Certificate: Data Engineering • GPA: 3.55</p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- ====== Skills ====== -->
+    <section id="skills" class="section">
+      <h2>Skills</h2>
+      <div class="grid grid-3">
+        <div class="card">
+          <h3>Languages</h3>
+          <p class="small">Fluent in English and Spanish</p>
+        </div>
+        <div class="card">
+          <h3>Technical</h3>
+          <p class="small">Python (data analysis, ML), Excel (advanced modeling, pivots, regressions), Power BI, Visual Basic (Excel VBA automation), Microsoft Office; currently learning R</p>
+        </div>
+        <div class="card">
+          <h3>Certifications</h3>
+          <p class="small">Lean Six Sigma Green Belt; Knowledge of Lean Manufacturing & ISO Standards (9001, 14001, 45001)</p>
+        </div>
+        <div class="card">
+          <h3>Analytical & Professional</h3>
+          <p class="small">Strong problem‑solving, data‑driven decision making, adaptability in fast‑paced environments, effective cross‑team communication</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- ====== Experience ====== -->
+    <section id="experience" class="section">
       <h2>Experience</h2>
       <ul class="cards">
-        <li>
-          <h3>Tenaris USA – McCarty Threading Facility</h3>
-          <p>Built a Random Forest model to predict pieces per insert from process variables like coolant concentration, RPM, and OD. Automated data pulls and refreshed cost reports for cutting inserts. Results used by production and cost teams to monitor trends and make faster decisions. Estimated savings ≈ $200k per year.</p>
+        <li class="card">
+          <h3>Industrial Engineering Intern — Tenaris USA, Houston, TX</h3>
+          <p class="small"><em>May 2025 – Aug 2025</em></p>
+          <ul class="small">
+            <li>Built and deployed a machine learning model in Python with a live data pipeline to predict insert life across 10 threading lines, enabling real‑time cost forecasting and an estimated $200K in annual savings at the McCarty facility.</li>
+            <li>Collaborated with operators, engineers, and managers to integrate technical insights with plant operations, strengthening communication across teams.</li>
+            <li>Selected among 30 intern projects to present to the 40‑member U.S. industrial planning team; model highlighted for replication nationwide.</li>
+          </ul>
+        </li>
+        <li class="card">
+          <h3>Management Systems Intern — Cementos Progreso, San Gabriel Plant, Guatemala</h3>
+          <p class="small"><em>Jun 2024 – Aug 2024</em></p>
+          <ul class="small">
+            <li>Developed a data‑driven method to monitor 500+ risks, opportunities, and stakeholders, prioritizing actions and supporting ISO 9001, 14001, and 45001 certifications.</li>
+            <li>Collaborated to build a Power BI dashboard with VBA integration, turning the method into a continuous monitoring tool for decisions.</li>
+            <li>Applied the framework during ISO audits and root‑cause analyses, driving ongoing improvement in quality, environmental, and safety processes.</li>
+          </ul>
+        </li>
+        <li class="card">
+          <h3>Project Engineer Co‑Op — Rodio Swissboring, Guatemala City, Guatemala</h3>
+          <p class="small"><em>Jan 2021 – Nov 2021</em></p>
+          <ul class="small">
+            <li>Supported a $3.5M overpass project via schedule optimization, cost analysis, and safety inspections to keep work on time and within budget.</li>
+            <li>Assisted in maintenance and repair of a fleet of multimillion‑dollar machinery, reducing downtime and improving reliability on‑site.</li>
+            <li>Completed a year‑long rotation across engineering and mechanical roles, demonstrating adaptability and commitment to project success.</li>
+          </ul>
+        </li>
+        <li class="card">
+          <h3>Co‑owner — Vudu Entertainment, College Station, TX</h3>
+          <p class="small"><em>Aug 2023 – Present</em></p>
+          <ul class="small">
+            <li>Led and managed a team of 6; oversaw budgets up to $50K and streamlined operations for efficiency and growth.</li>
+            <li>Built customer relationships and secured partnerships, expanding clientele and revenue.</li>
+            <li>Planned and executed a 1,200‑person event, showcasing organizational, negotiation, and leadership skills.</li>
+          </ul>
         </li>
       </ul>
     </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
+    <!-- ====== Projects (highlights) ====== -->
+    <section id="projects" class="section">
+      <div class="section-head">
+        <h2>Projects</h2>
+        <a class="btn ghost" href="#contact">Contact</a>
+      </div>
       <ul class="cards">
-        <li>
-          <h3>Insert Life Predictor</h3>
-          <p>Python + scikit-learn + Streamlit. Forecasts pieces per insert and standardizes consumption. Connected to Power BI for real time monitoring.</p>
+        <li class="card">
+          <h3>Insert Life Predictor (Tenaris)</h3>
+          <p class="small">Python + scikit‑learn + Streamlit app forecasting pieces per insert from RPM, OD, coolant concentration, etc. Connected to Power BI for real‑time monitoring and standardized consumption reporting.</p>
         </li>
-        <li>
+        <li class="card">
           <h3>Manufacturing Analytics Dashboard</h3>
-          <p>Power BI dashboard to track performance KPIs and insert cost per piece across product lines. Highlights outliers and trends for supervisors.</p>
+          <p class="small">Power BI dashboards for performance KPIs and insert cost per piece across product lines; highlights outliers and trends for supervisors.</p>
         </li>
       </ul>
     </section>
 
-    <section id="contact">
+    <!-- ====== Leadership & Achievements ====== -->
+    <section id="leadership" class="section">
+      <h2>Leadership & Achievements</h2>
+      <ul class="cards">
+        <li class="card">
+          <h3>High Performance Athlete — Guatemalan Olympic Sailing Committee</h3>
+          <p class="small"><em>2010 – Present</em></p>
+          <p class="small">Competed internationally for over a decade, earning multiple national titles while demonstrating perseverance, teamwork, and commitment to excellence.</p>
+        </li>
+        <li class="card">
+          <h3>Regional Conference Coordinator — IISE, Texas A&M</h3>
+          <p class="small"><em>Aug 2024 – Present</em></p>
+          <p class="small">Manage faculty relationships to create industry engagement opportunities. Trusted with organizing the 2026 IISE Regional Conference at Texas A&M.</p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- ====== Resume (inline) ====== -->
+    <section id="resume" class="section">
+      <div class="section-head">
+        <h2>Resume</h2>
+        <a class="btn ghost" href="resume.pdf" download>Download PDF</a>
+      </div>
+      <iframe class="resume-embed" title="Resume PDF" src="resume.pdf#view=FitH"></iframe>
+    </section>
+
+    <!-- ====== Contact ====== -->
+    <section id="contact" class="section">
       <h2>Contact</h2>
+      <p class="small">College Station, TX • (979) 328‑2629</p>
       <p>
-        <a href="mailto:mrosenbergc02@gmail.com">Email</a> ·
-        <a href="https://www.linkedin.com/in/matias-rosenberg/" target="_blank" rel="noreferrer">LinkedIn</a> ·
+        <a href="mailto:mrosenbergc02@gmail.com">mrosenbergc02@gmail.com</a> ·
+        <a href="https://www.linkedin.com/in/matias-rosenberg/" target="_blank" rel="noreferrer">LinkedIn</a>
       </p>
     </section>
   </main>
