--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
   <!-- ====== Header / Hero ====== -->
   <header class="site-header">
     <div class="wrap hero">
+  <div class="hero-grid">
+    <img src="images/headshot.jpg"
+         alt="Portrait of Matias Rosenberg"
+         class="avatar"
+         loading="lazy"
+         width="140"
+         height="140" />
+    <div>
       <h1>Matias Rosenberg</h1>
       <p class="muted">Industrial & Systems Engineering @ Texas A&M • ML in Manufacturing</p>
       <div class="cta">
         <a class="btn" href="resume.pdf" download>Download Resume (PDF)</a>
         <a class="btn ghost" href="#projects">View Projects</a>
       </div>
+    </div>
+  </div>
+</div>
+
     </div>
   </header>
 
