--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="site-header">
     <div class="wrap hero">
   <div class="hero-grid">
-    <img src="images/headshot.jpg"
+    <img src="headshot.jpg"
          alt="Portrait of Matias Rosenberg"
          class="avatar"
          loading="lazy"
