--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          height="140" />
     <div>
       <h1>Matias Rosenberg</h1>
-      <p class="muted">Industrial & Systems Engineering @ Texas A&M • ML in Manufacturing</p>
+      <p class="muted">Aspiring Industrial Engineer | Pursuing Excellence at Texas A&M | Passionate About Innovation and Efficiency</p>
       <div class="cta">
         <a class="btn" href="resume.pdf" download>Download Resume (PDF)</a>
         <a class="btn ghost" href="#projects">View Projects</a>
@@ -38,15 +38,14 @@
     <!-- ====== About ====== -->
     <section id="about" class="section">
       <h2>About</h2>
-      <p>I build practical data products for factories. My focus is Power BI dashboards and machine learning models that standardize insert consumption and reduce cost per piece. I like clean data pipelines, simple visuals, and measurable impact.</p>
+      <p>I’m an Industrial & Systems Engineering student at Texas A&M who enjoys tackling complex problems and finding ways to make processes more efficient. I thrive in team environments, where collaboration and communication are just as important as technical skills. My experiences span internships in engineering, management systems, and manufacturing, along with leading projects and even co-owning a business. Each role has reinforced my adaptability and curiosity — whether I’m learning new tools, working across cultures, or stepping into fast-paced environments. I’m motivated by challenges, eager to grow, and driven by the impact that comes from working with others to solve meaningful problems.</p>
       <div class="small">
         <span class="pill">Python</span>
-        <span class="pill">scikit‑learn</span>
-        <span class="pill">Pandas</span>
         <span class="pill">Power BI</span>
-        <span class="pill">Streamlit</span>
         <span class="pill">Excel (advanced)</span>
         <span class="pill">VBA</span>
+        <span class="pill">scikit‑learn</span>
+        <span class="pill">Pandas</span>
       </div>
     </section>
 
