--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>Matias Rosenberg</h1>
       <p class="muted">Aspiring Industrial Engineer | Pursuing Excellence at Texas A&M | Passionate About Innovation and Efficiency</p>
       <div class="cta">
-        <a class="btn" href="resume.pdf" download>Download Resume (PDF)</a>
+        <a class="btn" href="Matias Rosenberg Resume.pdf" download>Download Resume (PDF)</a>
         <a class="btn ghost" href="#projects">View Projects</a>
       </div>
     </div>
