--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matias Rosenberg – Portfolio</title>
-  <meta name="description" content="Industrial & Systems Engineering student building ML + analytics for manufacturing. Predictive modeling, Power BI, and process optimization." />
+  <meta name="description" content="Industrial & Systems Engineering student at Texas A&M focused on data analytics, cross-functional teamwork, and process optimization. Python, Power BI, and ML for manufacturing." />
   <meta property="og:title" content="Matias Rosenberg – Portfolio" />
-  <meta property="og:description" content="Predictive modeling, Power BI dashboards, and manufacturing analytics." />
+  <meta property="og:description" content="Data analytics + teamwork + optimization. Python, Power BI dashboards, and manufacturing ML projects." />
   <!-- External stylesheet -->
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -14,23 +14,22 @@
   <!-- ====== Header / Hero ====== -->
   <header class="site-header">
     <div class="wrap hero">
-  <div class="hero-grid">
-    <img src="headshot.jpg"
-         alt="Portrait of Matias Rosenberg"
-         class="avatar"
-         loading="lazy"
-         width="140"
-         height="140" />
-    <div>
-      <h1>Matias Rosenberg</h1>
-      <p class="muted">Aspiring Industrial Engineer | Pursuing Excellence at Texas A&M | Passionate About Innovation and Efficiency</p>
-      <div class="cta">
-        <a class="btn" href="Matias Rosenberg Resume.pdf" download>Download Resume (PDF)</a>
-        <a class="btn ghost" href="#projects">View Projects</a>
+      <div class="hero-grid">
+        <img src="headshot.jpg"
+             alt="Portrait of Matias Rosenberg"
+             class="avatar"
+             loading="lazy"
+             width="140"
+             height="140" />
+        <div>
+          <h1>Matias Rosenberg</h1>
+          <p class="muted">Industrial & Systems Engineering @ Texas A&M — Data Analytics, Teamwork, and Optimization</p>
+          <div class="cta">
+            <a class="btn" href="Matias Rosenberg Resume.pdf" download>Download Resume (PDF)</a>
+            <a class="btn ghost" href="#projects">View Projects</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
     </div>
   </header>
 
@@ -38,14 +37,14 @@
     <!-- ====== About ====== -->
     <section id="about" class="section">
       <h2>About</h2>
-      <p>I’m an Industrial & Systems Engineering student at Texas A&M who enjoys tackling complex problems and finding ways to make processes more efficient. I thrive in team environments, where collaboration and communication are just as important as technical skills. My experiences span internships in engineering, management systems, and manufacturing, along with leading projects and even co-owning a business. Each role has reinforced my adaptability and curiosity — whether I’m learning new tools, working across cultures, or stepping into fast-paced environments. I’m motivated by challenges, eager to grow, and driven by the impact that comes from working with others to solve meaningful problems.</p>
+      <p>I’m an Industrial & Systems Engineering student who builds analytics that teams can actually use. I love partnering with operators, engineers, and managers to turn messy plant data into simple dashboards and models that improve cost, throughput, and quality. My experience spans manufacturing ML, management systems, and project delivery—always with a focus on collaborating across functions and optimizing how work gets done.</p>
       <div class="small">
         <span class="pill">Python</span>
-        <span class="pill">Power BI</span>
-        <span class="pill">Excel (advanced)</span>
-        <span class="pill">VBA</span>
-        <span class="pill">scikit‑learn</span>
         <span class="pill">Pandas</span>
+        <span class="pill">scikit-learn</span>
+        <span class="pill">Power BI (DAX, Power Query)</span>
+        <span class="pill">SQL</span>
+        <span class="pill">Excel (advanced, VBA)</span>
       </div>
     </section>
 
@@ -58,7 +57,7 @@
         <li class="card">
           <h3>Texas A&M University — College Station, TX</h3>
           <p><strong>B.S. Industrial & Systems Engineering</strong> • <em>May 2026</em></p>
-          <p class="small">Minor: Project Management • Certificate: Data Engineering • GPA: 3.55</p>
+          <p class="small">Minor: Engineering Project Management • Certificate: Data Engineering • GPA: 3.55</p>
         </li>
       </ul>
     </section>
@@ -68,20 +67,24 @@
       <h2>Skills</h2>
       <div class="grid grid-3">
         <div class="card">
-          <h3>Languages</h3>
-          <p class="small">Fluent in English and Spanish</p>
+          <h3>Technical</h3>
+          <p class="small">Python (pandas, scikit-learn), SQL, Power BI (DAX, Power Query), Excel (advanced modeling, pivots, regressions), VBA automation, Streamlit; learning R</p>
         </div>
         <div class="card">
-          <h3>Technical</h3>
-          <p class="small">Python (data analysis, ML), Excel (advanced modeling, pivots, regressions), Power BI, Visual Basic (Excel VBA automation), Microsoft Office; currently learning R</p>
+          <h3>Analytics & Optimization</h3>
+          <p class="small">Predictive modeling, KPI design, cost/throughput optimization, root-cause analysis, data cleaning/feature engineering, experiment design</p>
+        </div>
+        <div class="card">
+          <h3>Teamwork & Communication</h3>
+          <p class="small">Cross-functional collaboration with operators/engineers/managers, requirements gathering, stakeholder updates, clear visuals and documentation</p>
         </div>
         <div class="card">
           <h3>Certifications</h3>
-          <p class="small">Lean Six Sigma Green Belt; Knowledge of Lean Manufacturing & ISO Standards (9001, 14001, 45001)</p>
+          <p class="small">Lean Six Sigma Green Belt; working knowledge of Lean Manufacturing & ISO 9001/14001/45001</p>
         </div>
         <div class="card">
-          <h3>Analytical & Professional</h3>
-          <p class="small">Strong problem‑solving, data‑driven decision making, adaptability in fast‑paced environments, effective cross‑team communication</p>
+          <h3>Languages</h3>
+          <p class="small">Fluent in English and Spanish</p>
         </div>
       </div>
     </section>
@@ -94,36 +97,35 @@
           <h3>Industrial Engineering Intern — Tenaris USA, Houston, TX</h3>
           <p class="small"><em>May 2025 – Aug 2025</em></p>
           <ul class="small">
-            <li>Built and deployed a machine learning model in Python with a live data pipeline to predict insert life across 10 threading lines, enabling real‑time cost forecasting and an estimated $200K in annual savings at the McCarty facility.</li>
-            <li>Collaborated with operators, engineers, and managers to integrate technical insights with plant operations, strengthening communication across teams.</li>
-            <li>Selected among 30 intern projects to present to the 40‑member U.S. industrial planning team; model highlighted for replication nationwide.</li>
+            <li>Built and deployed a Python ML model with a live data pipeline to predict insert life across 10 threading lines—enabling real-time cost forecasting and an estimated <strong>$200K/year</strong> in savings at the McCarty facility.</li>
+            <li>Partnered daily with operators, process engineers, and managers to translate line-side needs into usable analytics and standardize consumption reporting.</li>
+            <li>Selected among 30 intern projects to present to the 40-member U.S. industrial planning team; solution highlighted for replication across plants.</li>
           </ul>
         </li>
         <li class="card">
           <h3>Management Systems Intern — Cementos Progreso, San Gabriel Plant, Guatemala</h3>
           <p class="small"><em>Jun 2024 – Aug 2024</em></p>
           <ul class="small">
-            <li>Developed a data‑driven method to monitor 500+ risks, opportunities, and stakeholders, prioritizing actions and supporting ISO 9001, 14001, and 45001 certifications.</li>
-            <li>Collaborated to build a Power BI dashboard with VBA integration, turning the method into a continuous monitoring tool for decisions.</li>
-            <li>Applied the framework during ISO audits and root‑cause analyses, driving ongoing improvement in quality, environmental, and safety processes.</li>
+            <li>Designed a data-driven framework to monitor <strong>500+ risks, opportunities, and stakeholders</strong> aligned to ISO 9001/14001/45001; prioritized actions by impact.</li>
+            <li>Co-built a Power BI dashboard with VBA integration to turn the framework into a continuous monitoring tool for leadership decision-making.</li>
+            <li>Supported ISO audits and root-cause analyses, driving measurable improvements across quality, environment, and safety processes.</li>
           </ul>
         </li>
         <li class="card">
-          <h3>Project Engineer Co‑Op — Rodio Swissboring, Guatemala City, Guatemala</h3>
+          <h3>Project Engineer Co-Op — Rodio Swissboring, Guatemala City, Guatemala</h3>
           <p class="small"><em>Jan 2021 – Nov 2021</em></p>
           <ul class="small">
-            <li>Supported a $3.5M overpass project via schedule optimization, cost analysis, and safety inspections to keep work on time and within budget.</li>
-            <li>Assisted in maintenance and repair of a fleet of multimillion‑dollar machinery, reducing downtime and improving reliability on‑site.</li>
-            <li>Completed a year‑long rotation across engineering and mechanical roles, demonstrating adaptability and commitment to project success.</li>
+            <li>Supported a <strong>$3.5M</strong> overpass project through schedule optimization, cost analysis, and safety inspections to keep work on time and within budget.</li>
+            <li>Assisted maintenance and repair of multimillion-dollar equipment, reducing downtime and improving on-site reliability.</li>
+            <li>Completed a year-long rotation across engineering and mechanical roles, adapting quickly to diverse team needs.</li>
           </ul>
         </li>
         <li class="card">
-          <h3>Co‑owner — Vudu Entertainment, College Station, TX</h3>
+          <h3>Co-Owner — Vudu Entertainment, College Station, TX</h3>
           <p class="small"><em>Aug 2023 – Present</em></p>
           <ul class="small">
-            <li>Led and managed a team of 6; oversaw budgets up to $50K and streamlined operations for efficiency and growth.</li>
-            <li>Built customer relationships and secured partnerships, expanding clientele and revenue.</li>
-            <li>Planned and executed a 1,200‑person event, showcasing organizational, negotiation, and leadership skills.</li>
+            <li>Led a team of 6 and managed budgets up to <strong>$50K</strong>; standardized operations to improve repeatability and margin.</li>
+            <li>Built partnerships and customer relationships; planned and executed a <strong>1,200-person</strong> event with end-to-end logistics.</li>
           </ul>
         </li>
       </ul>
@@ -137,11 +139,13 @@
       <ul class="cards">
         <li class="card">
           <h3>Insert Life Predictor (Tenaris)</h3>
-          <p class="small">Python + scikit‑learn + Streamlit app forecasting pieces per insert from RPM, OD, coolant concentration, etc. Connected to Power BI for real‑time monitoring and standardized consumption reporting.</p>
+          <p class="small">Python + scikit-learn + Streamlit model to forecast pieces per insert from RPM, OD, coolant concentration, and more. Built with operators and engineers, connected to Power BI for real-time monitoring and standardized consumption reporting.</p>
+          <p class="small"><em>Focus:</em> data pipeline design, feature engineering, ML deployment, cross-functional rollout.</p>
         </li>
         <li class="card">
           <h3>Manufacturing Analytics Dashboard</h3>
-          <p class="small">Power BI dashboards for performance KPIs and insert cost per piece across product lines; highlights outliers and trends for supervisors.</p>
+          <p class="small">Power BI dashboards tracking performance KPIs and insert cost per piece by product line. Highlights outliers and trends for supervisors to target improvements.</p>
+          <p class="small"><em>Focus:</em> actionable visuals, DAX measures, stakeholder alignment, continuous improvement.</p>
         </li>
       </ul>
     </section>
@@ -151,14 +155,14 @@
       <h2>Leadership & Achievements</h2>
       <ul class="cards">
         <li class="card">
-          <h3>High Performance Athlete — Guatemalan Olympic Sailing Committee</h3>
+          <h3>High-Performance Athlete — Guatemalan Olympic Sailing Committee</h3>
           <p class="small"><em>2010 – Present</em></p>
-          <p class="small">Competed internationally for over a decade, earning multiple national titles while demonstrating perseverance, teamwork, and commitment to excellence.</p>
+          <p class="small">Competed internationally for over a decade; multiple national titles. Built resilience, teamwork, and execution under pressure.</p>
         </li>
         <li class="card">
           <h3>Regional Conference Coordinator — IISE, Texas A&M</h3>
           <p class="small"><em>Aug 2024 – Present</em></p>
-          <p class="small">Manage faculty relationships to create industry engagement opportunities. Trusted with organizing the 2026 IISE Regional Conference at Texas A&M.</p>
+          <p class="small">Coordinate with faculty and industry to create engagement opportunities; supporting the organization of the 2026 IISE Regional Conference.</p>
         </li>
       </ul>
     </section>
@@ -167,15 +171,15 @@
     <section id="resume" class="section">
       <div class="section-head">
         <h2>Resume</h2>
-        <a class="btn ghost" href="resume.pdf" download>Download PDF</a>
+        <a class="btn ghost" href="Matias Rosenberg Resume.pdf" download>Download PDF</a>
       </div>
-      <iframe class="resume-embed" title="Resume PDF" src="resume.pdf#view=FitH"></iframe>
+      <iframe class="resume-embed" title="Resume PDF" src="Matias Rosenberg Resume.pdf#view=FitH"></iframe>
     </section>
 
     <!-- ====== Contact ====== -->
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p class="small">College Station, TX • (979) 328‑2629</p>
+      <p class="small">College Station, TX • (979) 328-2629</p>
       <p>
         <a href="mailto:mrosenbergc02@gmail.com">mrosenbergc02@gmail.com</a> ·
         <a href="https://www.linkedin.com/in/matias-rosenberg/" target="_blank" rel="noreferrer">LinkedIn</a>
