--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Industrial & Systems Engineering student at Texas A&M focused on data analytics, cross-functional teamwork, and process optimization. Python, Power BI, and ML for manufacturing." />
   <meta property="og:title" content="Matias Rosenberg – Portfolio" />
   <meta property="og:description" content="Data analytics + teamwork + optimization. Python, Power BI dashboards, and manufacturing ML projects." />
-  <!-- External stylesheet -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -37,7 +36,7 @@
     <!-- ====== About ====== -->
     <section id="about" class="section">
       <h2>About</h2>
-      <p>I’m an Industrial & Systems Engineering student who builds analytics that teams can actually use. I love partnering with operators, engineers, and managers to turn messy plant data into simple dashboards and models that improve cost, throughput, and quality. My experience spans manufacturing ML, management systems, and project delivery—always with a focus on collaborating across functions and optimizing how work gets done.</p>
+      <p>I’m an Industrial & Systems Engineering student who builds analytics that teams can actually use. I partner with operators, engineers, and managers to turn messy plant data into simple dashboards and models that improve cost, throughput, and quality. My experience spans manufacturing ML, management systems, and project delivery—always with a focus on collaborating across functions and optimizing how work gets done.</p>
       <div class="small">
         <span class="pill">Python</span>
         <span class="pill">Pandas</span>
@@ -72,7 +71,7 @@
         </div>
         <div class="card">
           <h3>Analytics & Optimization</h3>
-          <p class="small">Predictive modeling, KPI design, cost/throughput optimization, root-cause analysis, data cleaning/feature engineering, experiment design</p>
+          <p class="small">Predictive modeling, KPI design, cost/throughput optimization, root-cause analysis, data cleaning & feature engineering, experiment design</p>
         </div>
         <div class="card">
           <h3>Teamwork & Communication</h3>
@@ -97,11 +96,17 @@
           <h3>Industrial Engineering Intern — Tenaris USA, Houston, TX</h3>
           <p class="small"><em>May 2025 – Aug 2025</em></p>
           <ul class="small">
-            <li>Built and deployed a Python ML model with a live data pipeline to predict insert life across 10 threading lines—enabling real-time cost forecasting and an estimated <strong>$200K/year</strong> in savings at the McCarty facility.</li>
+            <li>Built and deployed a Python ML model with a live data pipeline to predict insert life across <strong>10 threading lines</strong>—enabling real-time cost forecasting and an estimated <span class="kpi ok">$200K/year</span> in savings at the McCarty facility.</li>
             <li>Partnered daily with operators, process engineers, and managers to translate line-side needs into usable analytics and standardize consumption reporting.</li>
-            <li>Selected among 30 intern projects to present to the 40-member U.S. industrial planning team; solution highlighted for replication across plants.</li>
+            <li>Selected among <strong>30</strong> intern projects to present to the <strong>40-member</strong> U.S. industrial planning team; solution highlighted for <span class="kpi dx">replication across plants</span>.</li>
           </ul>
+          <div class="pill-row">
+            <span class="pill dx">Data Analytics</span>
+            <span class="pill team">Cross-functional</span>
+            <span class="pill ok">Optimization</span>
+          </div>
         </li>
+
         <li class="card">
           <h3>Management Systems Intern — Cementos Progreso, San Gabriel Plant, Guatemala</h3>
           <p class="small"><em>Jun 2024 – Aug 2024</em></p>
@@ -110,7 +115,13 @@
             <li>Co-built a Power BI dashboard with VBA integration to turn the framework into a continuous monitoring tool for leadership decision-making.</li>
             <li>Supported ISO audits and root-cause analyses, driving measurable improvements across quality, environment, and safety processes.</li>
           </ul>
+          <div class="pill-row">
+            <span class="pill dx">Power BI</span>
+            <span class="pill team">Stakeholder Collab</span>
+            <span class="pill ok">Continuous Improvement</span>
+          </div>
         </li>
+
         <li class="card">
           <h3>Project Engineer Co-Op — Rodio Swissboring, Guatemala City, Guatemala</h3>
           <p class="small"><em>Jan 2021 – Nov 2021</em></p>
@@ -119,14 +130,25 @@
             <li>Assisted maintenance and repair of multimillion-dollar equipment, reducing downtime and improving on-site reliability.</li>
             <li>Completed a year-long rotation across engineering and mechanical roles, adapting quickly to diverse team needs.</li>
           </ul>
+          <div class="pill-row">
+            <span class="pill team">Field Coordination</span>
+            <span class="pill ok">Schedule Optimization</span>
+            <span class="pill dx">Cost Analysis</span>
+          </div>
         </li>
+
         <li class="card">
           <h3>Co-Owner — Vudu Entertainment, College Station, TX</h3>
           <p class="small"><em>Aug 2023 – Present</em></p>
           <ul class="small">
-            <li>Led a team of 6 and managed budgets up to <strong>$50K</strong>; standardized operations to improve repeatability and margin.</li>
+            <li>Led a team of <strong>6</strong> and managed budgets up to <strong>$50K</strong>; standardized operations to improve repeatability and margin.</li>
             <li>Built partnerships and customer relationships; planned and executed a <strong>1,200-person</strong> event with end-to-end logistics.</li>
           </ul>
+          <div class="pill-row">
+            <span class="pill team">Team Lead</span>
+            <span class="pill ok">Ops Optimization</span>
+            <span class="pill dx">Reporting</span>
+          </div>
         </li>
       </ul>
     </section>
@@ -141,11 +163,21 @@
           <h3>Insert Life Predictor (Tenaris)</h3>
           <p class="small">Python + scikit-learn + Streamlit model to forecast pieces per insert from RPM, OD, coolant concentration, and more. Built with operators and engineers, connected to Power BI for real-time monitoring and standardized consumption reporting.</p>
           <p class="small"><em>Focus:</em> data pipeline design, feature engineering, ML deployment, cross-functional rollout.</p>
+          <div class="pill-row">
+            <span class="pill dx">ML & Data</span>
+            <span class="pill team">Co-designed with Ops</span>
+            <span class="pill ok">Cost Optimization</span>
+          </div>
         </li>
         <li class="card">
           <h3>Manufacturing Analytics Dashboard</h3>
           <p class="small">Power BI dashboards tracking performance KPIs and insert cost per piece by product line. Highlights outliers and trends for supervisors to target improvements.</p>
           <p class="small"><em>Focus:</em> actionable visuals, DAX measures, stakeholder alignment, continuous improvement.</p>
+          <div class="pill-row">
+            <span class="pill dx">Power BI</span>
+            <span class="pill team">Supervisor-ready</span>
+            <span class="pill ok">Throughput</span>
+          </div>
         </li>
       </ul>
     </section>
