--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- ====== About ====== -->
     <section id="about" class="section">
       <h2>About</h2>
-      <p>I’m an Industrial & Systems Engineering student who builds analytics that teams can actually use. I partner with operators, engineers, and managers to turn messy plant data into simple dashboards and models that improve cost, throughput, and quality. My experience spans manufacturing ML, management systems, and project delivery—always with a focus on collaborating across functions and optimizing how work gets done.</p>
+      <p>I’m an Industrial & Systems Engineering student who builds analytics that teams can actually use. I partner with operators, engineers, and managers to turn plant data into simple dashboards and models that improve cost, throughput, and quality. My experience spans manufacturing ML, management systems, and project delivery—always with a focus on collaborating across functions and optimizing how work gets done.</p>
       <div class="small">
         <span class="pill">Python</span>
         <span class="pill">Pandas</span>
