--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
       <p>I’m an Industrial & Systems Engineering student who builds analytics that teams can actually use. I partner with operators, engineers, and managers to turn plant data into simple dashboards and models that improve cost, throughput, and quality. My experience spans manufacturing ML, management systems, and project delivery—always with a focus on collaborating across functions and optimizing how work gets done.</p>
       <div class="small">
         <span class="pill">Python</span>
-        <span class="pill">Pandas</span>
         <span class="pill">scikit-learn</span>
         <span class="pill">Power BI (DAX, Power Query)</span>
-        <span class="pill">SQL</span>
         <span class="pill">Excel (advanced, VBA)</span>
+        <span class="pill">Minitab</span>
       </div>
     </section>
 
@@ -67,7 +66,7 @@
       <div class="grid grid-3">
         <div class="card">
           <h3>Technical</h3>
-          <p class="small">Python (pandas, scikit-learn), SQL, Power BI (DAX, Power Query), Excel (advanced modeling, pivots, regressions), VBA automation, Streamlit; learning R</p>
+          <p class="small">Python (pandas, scikit-learn), Power BI, Excel (advanced modeling, pivots, regressions), VBA automation, R</p>
         </div>
         <div class="card">
           <h3>Analytics & Optimization</h3>
@@ -161,7 +160,7 @@
       <ul class="cards">
         <li class="card">
           <h3>Insert Life Predictor (Tenaris)</h3>
-          <p class="small">Python + scikit-learn + Streamlit model to forecast pieces per insert from RPM, OD, coolant concentration, and more. Built with operators and engineers, connected to Power BI for real-time monitoring and standardized consumption reporting.</p>
+          <p class="small">Python + scikit-learn + Random Forest + Streamlit model to forecast pieces per insert from cutting parameters. Built with operators and engineers, predictions for real-time monitoring and standardized consumption reporting.</p>
           <p class="small"><em>Focus:</em> data pipeline design, feature engineering, ML deployment, cross-functional rollout.</p>
           <div class="pill-row">
             <span class="pill dx">ML & Data</span>
@@ -169,16 +168,17 @@
             <span class="pill ok">Cost Optimization</span>
           </div>
         </li>
-        <li class="card">
-          <h3>Manufacturing Analytics Dashboard</h3>
-          <p class="small">Power BI dashboards tracking performance KPIs and insert cost per piece by product line. Highlights outliers and trends for supervisors to target improvements.</p>
-          <p class="small"><em>Focus:</em> actionable visuals, DAX measures, stakeholder alignment, continuous improvement.</p>
-          <div class="pill-row">
-            <span class="pill dx">Power BI</span>
-            <span class="pill team">Supervisor-ready</span>
-            <span class="pill ok">Throughput</span>
-          </div>
-        </li>
+<li class="card">
+  <h3>Cementos Progreso – Risk & Stakeholder Monitoring Tool</h3>
+  <p class="small">Developed a data-driven framework at the San Gabriel plant to track <strong>500+ risks, opportunities, and stakeholders</strong>. Built a Power BI dashboard with VBA integration to turn it into a continuous monitoring and decision-making tool.</p>
+  <p class="small"><em>Focus:</em> ISO 9001/14001/45001 compliance, root-cause analysis, and continuous improvement of quality, environmental, and safety processes.</p>
+  <div class="pill-row">
+    <span class="pill dx">Power BI + VBA</span>
+    <span class="pill team">Stakeholder Collaboration</span>
+    <span class="pill ok">Process Optimization</span>
+  </div>
+</li>
+
       </ul>
     </section>
 
