--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
           <h3>Industrial Engineering Intern — Tenaris USA, Houston, TX</h3>
           <p class="small"><em>May 2025 – Aug 2025</em></p>
           <ul class="small">
-            <li>Built and deployed a Python ML model with a live data pipeline to predict insert life across <strong>10 threading lines</strong>—enabling real-time cost forecasting and an estimated <span class="kpi ok">$200K/year</span> in savings at the McCarty facility.</li>
+            <li>Built and deployed a Python ML model with a live data pipeline to predict insert life across <strong>10 threading lines</strong>—enabling real-time cost forecasting and an estimated <strong>$200K/year</strong> in savings at the McCarty facility.</li>
             <li>Partnered daily with operators, process engineers, and managers to translate line-side needs into usable analytics and standardize consumption reporting.</li>
-            <li>Selected among <strong>30</strong> intern projects to present to the <strong>40-member</strong> U.S. industrial planning team; solution highlighted for <span class="kpi dx">replication across plants</span>.</li>
+            <li>Selected among <strong>30</strong> intern projects to present to the <strong>40-member</strong> U.S. industrial planning team; solution highlighted for replication across plants.</li>
           </ul>
           <div class="pill-row">
             <span class="pill dx">Data Analytics</span>
